Cap SourceTable height and fix link ItemBlock spacing.

--- a/src/style/_constants.scss
+++ b/src/style/_constants.scss
@@ -6,6 +6,7 @@ $screen-lg-min: 1200px;
 $block-spacing: 16px;
 $block-padding: 16px;
 $mini-block-spacing: $block-spacing / 2;
+$block-content-spacing: 8px;
 
 $container-sm: 720px + $block-spacing * 2;
 $container-md: 940px + $block-spacing * 2;
